--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
+dj-database-url==0.5.0
 Django==3.1.7
 gunicorn==20.1.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
+whitenoise==5.2.0
